--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     />
 
     <!-- META -->
-    <title>My DAO</title>
+    <title>PatitasDAO 🐾</title>
     <meta
       name="description"
       content="Check out my DAO built with @_buildspace & @thirdweb_!"
