--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;402;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
+
 
     <!-- META -->
     <title>PatitasDAO 🐾</title>
